Some translations and contrast fixes

--- a/themes/casper/static/css/screen.css
+++ b/themes/casper/static/css/screen.css
@@ -248,6 +248,8 @@ table { border-collapse: collapse; border-spacing: 0; }
    2. General - Setting up some base styles
    ========================================================================== */
 
+/* soft grey color for metadata: #777 */
+
 html {
     height: 100%;
     max-height: 100%;
@@ -888,7 +890,7 @@ body.nav-opened .nav {
     padding: 0 15px;
     border: #bfc8cd 1px solid;
     opacity: 1;
-    color: #9EABB3;
+    color: #777;
     text-align: center;
     font-size: 12px;
     text-transform: uppercase;
@@ -1065,7 +1067,7 @@ body:not(.post-template) .post-title {
     font-family: "Open Sans", sans-serif;
     font-size: 1.5rem;
     line-height: 2.2rem;
-    color: #9EABB3;
+    color: #777;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -1080,7 +1082,7 @@ body:not(.post-template) .post-title {
 }
 
 .post-meta a {
-    color: #9EABB3;
+    color: #777;
     text-decoration: none;
 }
 
@@ -1241,11 +1243,11 @@ body:not(.post-template) .post-title {
     font-size: 1.4rem;
     line-height: 1;
     font-style: italic;
-    color: #9EABB3;
+    color: #777;
 }
 
 .author-meta a {
-    color: #9EABB3;
+    color: #777;
 }
 .author-meta a:hover {
     color: #111;
@@ -1294,7 +1296,7 @@ body:not(.post-template) .post-title {
     text-transform: uppercase;
     text-align: center;
     font-size: 1.3rem;
-    color: #9EABB3;
+    color: #777;
     margin-top:-0.6em;
 }
 
@@ -1474,12 +1476,12 @@ body:not(.post-template) .post-title {
     margin: 4rem auto;
     font-family: "Open Sans", sans-serif;
     font-size: 1.3rem;
-    color: #9EABB3;
+    color: #777;
     text-align: center;
 }
 
 .pagination a {
-    color: #9EABB3;
+    color: #777;
     transition: all 0.2s ease;
 }
 
